# Python_piscine

./: .gitignore  10.py  README.md  config.txt  makefile  pyproject.toml
a_maze_ing/: README.md  a_maze_ing.py  config.txt  makefile  mazegen-0.1.0-py3-none-any.whl  pyproject.toml
ex2/: ft_harvest_total.py
ex3/: ft_plant_age.py
ex4/: ft_water_reminder.py
ex5/: ft_count_harvest_iterative.py
ex6/: ft_garden_summary.py
mazegen/: a_maze_ing.py  config.txt
push_00/ex1/: ft_plot_area.py
push_00/ex2/: ft_harvest_total.py
push_00/ex3/: ft_plant_age.py
push_00/ex5/: ft_count_harvest_recursive.py
push_00/ex6/: ft_garden_summary.py
push_00/ex7/: ft_seed_inventory.py
python6/: elements.py  ft_alembic_0  ft_alembic_1  ft_alembic_2  ft_alembic_3  ft_alembic_4  ft_alembic_5  ft_distillation_1.py
python6/alchemy/: __init__.py  elements.py  potions.py
python_01/ex0/: ft_garden_intro.py
python_01/ex1/: ft_garden_data.py
python_01/ex2/: ft_plant_growth.py
python_01/ex3/: ft_plant_factory.py
python_01/ex4/: ft_garden_security.py
python_01/ex5/: ft_plant_types.py
python_02/ex0/: ft_first_exception.py
python_02/ex1/: ft_different_errors.py
python_02/ex2/: ft_custom_errors.py
python_02/ex3/: ft_finally_block.py
python_02/ex4/: ft_raise_errors.py
python_06/: elements.py  ft_alembic_4.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
python_07/: battle.py  capacitor.py  tournament.py
python_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+44 files in other folders)
