[project]
name = "ex1"
version = "0.1.0"
description = "Matrix loading exercis"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.1.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "matplotlib>=3.7.0",
    "requests>=2.31.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
